--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,6 @@
 generic errors page and redirects / or per page msg?
 X finish user profile, including 
-    -> format textarea nl to br, 
-    -> including email confirm request, 
-    -> message user modal, 
-    -> email not confirmed flash
+    Make a check
 X validate your email post creation message
 X validate email page
 select location
